--- a/product-service.properties
+++ b/product-service.properties
@@ -3,3 +3,5 @@ spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.Oracle9Dialect
 spring.jpa.hibernate.ddl-auto=update
+
+test.name=test123
